// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component calls onClick function when clicked 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`Button component calls onClick function when small button wrapper is clicked 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`Button component renders a disabled icon button 1`] = `
<div
  aria-label="UserIcon"
  class="IconButtonWrapper IconButtonWrapper--medium"
  data-testid="icon-button-wrapper"
>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium IconButton--disabled"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text Button Button--dark-background MuiButton-textPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders a small icon button 1`] = `
<div
  aria-label="UserIcon"
  class="IconButtonWrapper IconButtonWrapper--small"
  data-testid="icon-button-wrapper"
>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--small IconButton--enabled"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an icon button 1`] = `
<div
  aria-label="User"
  class="IconButtonWrapper IconButtonWrapper--medium"
  data-testid="icon-button-wrapper"
>
  <button
    aria-label="User"
    class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium IconButton--enabled"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button Button--dark-background MuiButton-outlinedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
